タイトルを修正

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Typing Game</title>
+    <title>VS Typing</title>
   </head>
   <style>
     canvas {
